@@ -1,3 +1,9 @@
+2003-07-14  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>
+
+	* lib/gdi32/misc/stubs.c Remove FillRgn.
+	* lib/gdi32/objects/region.c Add FillRng.
+	It looks okay.
+
 2003-07-12  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	Changes for compiling with w32api
